[package]
name = "wasm-vis"
version = "0.1.0"
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.6"
wasm-logger = "0.2.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]


[dependencies.delta]
version = "0.1"
path = "../../rust_proj/delta"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
  'HtmlElement',
  'Node',
  'Window',
  'Performance',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
#opt-level = "s"
opt-level = 3
